--- a/trapitos/package.json
+++ b/trapitos/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.8.0-beta.4",
+    "@heroui/use-theme": "^2.1.8",
     "@tailwindcss/vite": "^4.1.5",
     "framer-motion": "^12.10.4",
     "react": "^19.1.0",
