--- a/trapitos/package.json
+++ b/trapitos/package.json
@@ -23,8 +23,16 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@heroui/react": "^2.8.0-beta.4",
+    "@heroui/use-theme": "^2.1.8",
     "@tailwindcss/vite": "^4.1.6",
-    "tailwindcss": "^4.1.6"
+    "@types/express": "^5.0.1",
+    "express": "^5.1.0",
+    "framer-motion": "^12.10.5",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.6.0",
+    "tailwindcss": "^4.1.6",
+    "typeorm": "^0.3.23"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
