--- a/trapitos/package.json
+++ b/trapitos/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "^12.10.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.0",
+    "reflect-metadata": "^0.2.2",
     "tailwindcss": "^4.1.6",
     "typeorm": "^0.3.23"
   },
