--- a/trapitos/tsconfig.web.json
+++ b/trapitos/tsconfig.web.json
@@ -4,12 +4,16 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts", 
+    "src/backend/**/*.ts", 
   ],
   "compilerOptions": {
     "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "paths": {
       "@renderer/*": [
         "src/renderer/src/*"
