--- a/trapitos/package.json
+++ b/trapitos/package.json
@@ -5,6 +5,7 @@
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
+  "type": "module",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint --cache .",
@@ -26,7 +27,9 @@
     "@heroui/react": "^2.8.0-beta.4",
     "@heroui/use-theme": "^2.1.8",
     "@tailwindcss/vite": "^4.1.6",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "framer-motion": "^12.10.5",
     "react-icons": "^5.5.0",
