--- a/trapitos/package.json
+++ b/trapitos/package.json
@@ -26,6 +26,7 @@
     "@electron-toolkit/utils": "^4.0.0",
     "@heroui/react": "^2.8.0-beta.4",
     "@heroui/use-theme": "^2.1.8",
+    "@number-flow/react": "^0.5.9",
     "@tailwindcss/vite": "^4.1.6",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
